add: modify search dto & controller
