# swagger.json
@@ -231,7 +231,7 @@
             "name": "search",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/SearchDTO"
+              "$ref": "#/definitions/PutSearchRequestDTO"
             }
           }
         ],
@@ -239,7 +239,7 @@
           "200": {
             "description": "Success",
             "schema": {
-              "$ref": "#/definitions/SearchDTO"
+              "$ref": "#/definitions/PutSearchResponseDTO"
             }
           },
           "400": {
@@ -1630,6 +1630,11 @@
           "description": "The user  lastName",
           "type": "string",
           "x-go-name": "UserLastName"
+        },
+        "userType": {
+          "description": "The user  type",
+          "type": "string",
+          "x-go-name": "UserType"
         }
       },
       "x-go-package": "github.com/philvc/jobbi-api/contract"
@@ -1676,6 +1681,92 @@
         "description",
         "title",
         "type"
+      ],
+      "properties": {
+        "description": {
+          "description": "The description",
+          "type": "string",
+          "x-go-name": "Description"
+        },
+        "id": {
+          "description": "The id",
+          "type": "string",
+          "x-go-name": "Id"
+        },
+        "sector": {
+          "description": "The search sector",
+          "type": "string",
+          "x-go-name": "Sector"
+        },
+        "tags": {
+          "$ref": "#/definitions/StringArray"
+        },
+        "title": {
+          "description": "The title",
+          "type": "string",
+          "x-go-name": "Title"
+        },
+        "type": {
+          "description": "The search type",
+          "type": "string",
+          "x-go-name": "Type"
+        },
+        "userId": {
+          "description": "UserId",
+          "type": "string",
+          "x-go-name": "UserID"
+        }
+      },
+      "x-go-package": "github.com/philvc/jobbi-api/contract"
+    },
+    "PutSearchRequestDTO": {
+      "description": "An search",
+      "type": "object",
+      "required": [
+        "description",
+        "title",
+        "sector",
+        "tags",
+        "type"
+      ],
+      "properties": {
+        "description": {
+          "description": "The description",
+          "type": "string",
+          "x-go-name": "Description"
+        },
+        "sector": {
+          "description": "The search sector",
+          "type": "string",
+          "x-go-name": "Sector"
+        },
+        "tags": {
+          "$ref": "#/definitions/StringArray"
+        },
+        "title": {
+          "description": "The title",
+          "type": "string",
+          "x-go-name": "Title"
+        },
+        "type": {
+          "description": "The search type",
+          "type": "string",
+          "x-go-name": "Type"
+        }
+      },
+      "x-go-package": "github.com/philvc/jobbi-api/contract"
+    },
+    "PutSearchResponseDTO": {
+      "description": "An search",
+      "type": "object",
+      "required": [
+        "id",
+        "description",
+        "title",
+        "sector",
+        "tags",
+        "type",
+        "userId"
       ],
       "properties": {
         "description": {
